# bitcoin-tidy-experiments

./: CMakeLists.txt  COPYING  EarlyExitTidyModule.cpp  EarlyExitTidyModule.h  ExportMainCheck.cpp  ExportMainCheck.h  InitListCheck.cpp  InitListCheck.h  LogPrintfCheck.cpp  LogPrintfCheck.h  NoADLCheck.cpp  NoADLCheck.h  README.md  bitcoin-tidy.cpp  early_exit.h  example.cc  example.h  example_adl.cc  example_exportmain.cc  example_init.cc  example_logprintf.cc  preload.tidy
